--- a/index.html
+++ b/index.html
@@ -17,28 +17,40 @@
 </head>
 <body>
     <header>
-        <div id="sony">
-            <div class="container-fluid">
-                <div class="row bg-dark">
-                    <div class="col-1 offset-11">
-                        <h1 class="text-uppercase">sony</h1>
-                    </div>
+        <div class="container-fluid">
+            <div class="row bg-dark">
+                <div class="col-1 offset-11">
+                    <h1 class="text-uppercase text-white">sony</h1>
                 </div>
-
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <img class="navbar-brand" src="img/play_logo.svg" alt="Playstation logo">
-                    <div class="collpse navbar-collapse">
-                        <ul>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link"></a>
-                                <img src="img/chevron-down-solid.svg" alt="">
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
             </div>
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+                <img class="navbar-brand" src="img/play_logo.svg" alt="Playstation logo">
+                <div class="collpse navbar-collapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a class="nav-link fs-5 text-dark" href="#" >Giochi<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link fs-5 text-dark" href="#" >Hardware<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link fs-5 text-dark" href="#" >Servizi<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link fs-5 text-dark" href="#" >Novità<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link fs-5 text-dark" href="#" >Fai acquisti<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link fs-5 text-dark" href="#" >Supporto<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-        
+    
     </header>
 </body>
 </html>
