--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <header>
         <div class="container-fluid">
-            <div class="row bg-dark" id="sony">
-                <div class="col-1 offset-11">
+            <div class="row bg-dark"  id="sony">
+                <div class="col-12 ">
                     <h1 class="text-uppercase text-white fs-3 text-end">sony</h1>
                 </div>
             </div>
@@ -31,19 +31,19 @@
                         <li class="nav-item">
                             <a class="nav-link fs-5 text-dark" href="#" >Giochi<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
                         </li>
-                        <li class="nav-item ms-3">
+                        <li class="nav-item ms-2">
                             <a class="nav-link fs-5 text-dark" href="#" >Hardware<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
                         </li>
-                        <li class="nav-item ms-3">
+                        <li class="nav-item ms-2">
                             <a class="nav-link fs-5 text-dark" href="#" >Servizi<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
                         </li>
-                        <li class="nav-item ms-3">
+                        <li class="nav-item ms-2">
                             <a class="nav-link fs-5 text-dark" href="#" >Novità<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
                         </li>
-                        <li class="nav-item ms-3">
+                        <li class="nav-item ms-2">
                             <a class="nav-link fs-5 text-dark" href="#" >Fai acquisti<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
                         </li>
-                        <li class="nav-item ms-3">
+                        <li class="nav-item ms-2">
                             <a class="nav-link fs-5 text-dark" href="#" >Supporto<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
                         </li>
                     </ul>
@@ -64,24 +64,25 @@
                 </button>
             </nav>
         </div>
-    
+    </header>
+
+    <main>
         <section id="jumbo">
             <div class="container-fluid">
-                <div class="row">
-                   
-                    <div class="col-12 col-xl-4 text-white">
+                <div class="row align-items-end height-670">
+                    <div class="col-11 col-lg-6 col-xl-4 text-white ms-sm-5 mb-5 ">
                         <div class="row">
-                            <div class="col-12 col-xl-6">
-                                <img src="img/returnal-hero-banner-logo.png" class="img-fluid" alt="img returnal">
+                            <div class="col-7 col-lg-6">
+                                <img src="img/returnal-hero-banner-logo.png" class="img-fluid mb-4" alt="img returnal">
                             </div>
                         </div>
-                        <h1>Rompi il cerchio</h1>
-                        <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascentifico, disponibile in esclusiva su PS5.</p>
-                        <button type="button" class="btn rounded-pill"></button>
+                        <h1 class="mb-4">Rompi il cerchio</h1>
+                        <p class="mb-4">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascentifico, disponibile in esclusiva su PS5.</p>
+                        <button type="button" class="btn rounded-pill my-btn-buy text-white">Acquista ora</button>
                     </div>
                 </div>
             </div>
         </section>
-    </header>
+    </main>
 </body>
 </html>
