--- a/index.html
+++ b/index.html
@@ -83,6 +83,31 @@
                 </div>
             </div>
         </section>
+
+        <section class="banner">
+            <div class="container-fluid px-4 py-5 px-sm-4 py-sm-5 px-lg-5">
+                <div class="row gy-4 gx-4 gx-sm-4 gy-md-5 gx-md-5 gx-xl-4 gx-xxl-5">
+                    <div class="col-6 col-sm-4 col-xl-2 ">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid" alt="returnal thumbnail">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" class="img-fluid" alt="ratchet and clank rift thumbnail">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid" alt="returnal thumbnail">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" class="img-fluid" alt="ratchet and clank rift thumbnail">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid" alt="returnal thumbnail">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" class="img-fluid" alt="ratchet and clank rift thumbnail">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
