--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </section>
 
-        <section class="banner">
+        <section id="jumbo-banner" class="banner">
             <div class="container-fluid px-4 py-5 px-sm-4 py-sm-5 px-lg-5">
                 <div class="row gy-4 gx-4 gx-sm-4 gy-md-5 gx-md-5 gx-xl-4 gx-xxl-5">
                     <div class="col-6 col-sm-4 col-xl-2 ">
@@ -104,6 +104,28 @@
                     </div>
                     <div class="col-6 col-sm-4 col-xl-2">
                         <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" class="img-fluid" alt="ratchet and clank rift thumbnail">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="ps5">
+            <div class="container-fluid">
+                <div class="row mt-5 mb-5">
+                    <div class="col-12 text-center">
+                        <h6 class="text-uppercase my-text-blue fs-6 fw-bold mb-0">play has no limits</h6>
+                        <h1 class="fs-1 mb-4">Ecco la PlayStation 5</h1>
+                        <p class="my-text-grey">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-12 col-md-6">
+                        <h1 class="fs-1 mb-4">Console PlayStation 5</h1>
+                        <p class="my-text-grey mb-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                        <button type="button" class="btn rounded-pill text-white my-btn-info">Maggiori informazioni</button>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
                     </div>
                 </div>
             </div>
