--- a/index.html
+++ b/index.html
@@ -110,22 +110,44 @@
         </section>
 
         <section id="ps5">
-            <div class="container-fluid">
+            <div class="container-fluid px-3 px-sm-4 px-md-5">
                 <div class="row mt-5 mb-5">
                     <div class="col-12 text-center">
                         <h6 class="text-uppercase my-text-blue fs-6 fw-bold mb-0">play has no limits</h6>
                         <h1 class="fs-1 mb-4">Ecco la PlayStation 5</h1>
-                        <p class="my-text-grey">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                        <p class="my-text-grey fs-5 ">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6">
                         <h1 class="fs-1 mb-4">Console PlayStation 5</h1>
-                        <p class="my-text-grey mb-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
-                        <button type="button" class="btn rounded-pill text-white my-btn-info">Maggiori informazioni</button>
+                        <p class="my-text-grey mb-4 fs-5">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                        <button type="button" class="btn rounded-pill text-white my-btn-info fw-bold">Maggiori informazioni</button>
                     </div>
                     <div class="col-12 col-md-6">
                         <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
+                    </div>
+                </div>
+                <div class="row text-center justify-content-md-between px-0 px-md-4">
+                    <div class="col-4 col-md-2 ">
+                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
+                        <p class="d-md-block d-none">Console PS5</p>
+                    </div>
+                    <div class="col-4 col-md-2 ">
+                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
+                        <p class="d-md-block d-none">Console PS5</p>
+                    </div>
+                    <div class="col-4 col-md-2 ">
+                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
+                        <p class="d-md-block d-none">Console PS5</p>
+                    </div>
+                    <div class="col-4 col-md-2 ">
+                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
+                        <p class="d-md-block d-none">Console PS5</p>
+                    </div>
+                    <div class="col-4 col-md-2 ">
+                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
+                        <p class="d-md-block d-none">Console PS5</p>
                     </div>
                 </div>
             </div>
