ita takes two section

--- a/index.html
+++ b/index.html
@@ -134,20 +134,36 @@
                         <p class="d-md-block d-none">Console PS5</p>
                     </div>
                     <div class="col-4 col-md-2 ">
-                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
-                        <p class="d-md-block d-none">Console PS5</p>
+                        <img src="img/joypad-thumb.png" class="img-fluid" alt="Joypad thumbnail">
+                        <p class="d-md-block d-none">Controller wireless Dual sense&trade;</p>
                     </div>
                     <div class="col-4 col-md-2 ">
-                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
-                        <p class="d-md-block d-none">Console PS5</p>
+                        <img src="img/headset-thumb.png" class="img-fluid" alt="headset  thumbnail">
+                        <p class="d-md-block d-none">Cuffie wireless con microfono PULSE 3&trade;</p>
                     </div>
                     <div class="col-4 col-md-2 ">
-                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
-                        <p class="d-md-block d-none">Console PS5</p>
+                        <img src="img/remote-thumb.png" class="img-fluid" alt="remote thumbnail">
+                        <p class="d-md-block d-none">Telecomando Media</p>
                     </div>
                     <div class="col-4 col-md-2 ">
-                        <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
-                        <p class="d-md-block d-none">Console PS5</p>
+                        <img src="img/camera-thumb.jpg" class="img-fluid" alt="camera thumbnail">
+                        <p class="d-md-block d-none">Telecamera HD</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="it-takes-two">
+            <div class="container-fluid py-5 px-2 px-sm-3 p-lg-5">
+                <div class="row height-670 align-items-end">
+                    <div class="col-11 col-lg-6 col-xl-4 text-white">
+                        <div class="row">
+                            <div class="col-8 col-lg-6">
+                                <img src="img/it-takes-two-logo.png" class="img-fluid mb-5" alt="img it takes two">
+                            </div>
+                        </div>
+                        <h1 class="mb-5 fs-1 fw-bold">Un'avventura cooperativa selvaggia ti attende</h1>
+                        <p class="mb-5">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che travolte il suo genere.</p>
+                        <button type="button" class="btn rounded-pill my-btn-buy text-white mb-2">Acquista ora</button>
                     </div>
                 </div>
             </div>
