--- a/index.html
+++ b/index.html
@@ -131,39 +131,125 @@
                 <div class="row text-center justify-content-md-between px-0 px-md-4">
                     <div class="col-4 col-md-2 ">
                         <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
-                        <p class="d-md-block d-none">Console PS5</p>
+                        <p class="d-md-block d-none my-text-grey">Console PS5</p>
                     </div>
                     <div class="col-4 col-md-2 ">
                         <img src="img/joypad-thumb.png" class="img-fluid" alt="Joypad thumbnail">
-                        <p class="d-md-block d-none">Controller wireless Dual sense&trade;</p>
+                        <p class="d-md-block d-none my-text-grey">Controller wireless Dual sense&trade;</p>
                     </div>
                     <div class="col-4 col-md-2 ">
                         <img src="img/headset-thumb.png" class="img-fluid" alt="headset  thumbnail">
-                        <p class="d-md-block d-none">Cuffie wireless con microfono PULSE 3&trade;</p>
+                        <p class="d-md-block d-none my-text-grey">Cuffie wireless con microfono PULSE 3&trade;</p>
                     </div>
                     <div class="col-4 col-md-2 ">
                         <img src="img/remote-thumb.png" class="img-fluid" alt="remote thumbnail">
-                        <p class="d-md-block d-none">Telecomando Media</p>
+                        <p class="d-md-block d-none my-text-grey">Telecomando Media</p>
                     </div>
                     <div class="col-4 col-md-2 ">
                         <img src="img/camera-thumb.jpg" class="img-fluid" alt="camera thumbnail">
-                        <p class="d-md-block d-none">Telecamera HD</p>
+                        <p class="d-md-block d-none my-text-grey">Telecamera HD</p>
                     </div>
                 </div>
             </div>
         </section>
         <section id="it-takes-two">
-            <div class="container-fluid py-5 px-2 px-sm-3 p-lg-5">
+            <div class="container-fluid py-5 px-2 px-sm-4 p-lg-5">
                 <div class="row height-670 align-items-end">
                     <div class="col-11 col-lg-6 col-xl-4 text-white">
                         <div class="row">
-                            <div class="col-8 col-lg-6">
+                            <div class="col-7 col-lg-8">
                                 <img src="img/it-takes-two-logo.png" class="img-fluid mb-5" alt="img it takes two">
                             </div>
                         </div>
-                        <h1 class="mb-5 fs-1 fw-bold">Un'avventura cooperativa selvaggia ti attende</h1>
+                        <h1 class="mb-5 ">Un'avventura cooperativa selvaggia ti attende</h1>
                         <p class="mb-5">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che travolte il suo genere.</p>
-                        <button type="button" class="btn rounded-pill my-btn-buy text-white mb-2">Acquista ora</button>
+                        <button type="button" class="btn rounded-pill my-btn-buy text-white mb-2 fw-bold">Acquista ora</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="text-white" id="new">
+            <div class="container-fluid py-3 px-sm-4 px-xl-5 py-xl-5">
+                <div class="row gy-5">
+                    <div class="col-12 text-white">
+                        <h1 class="mb-4">Nuove uscite</h1>
+                        <h4 class="mb-4">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" class="img-fluid mb-3" alt="Tony hawk's pro skater">
+                        <h6>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" class="img-fluid mb-3" alt="Crash Bandicoot 4">
+                        <h6>Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" class="img-fluid mb-3" alt="Tony hawk's pro skater">
+                        <h6>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" class="img-fluid mb-3" alt="Crash Bandicoot 4">
+                        <h6>Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" class="img-fluid mb-3" alt="Tony hawk's pro skater">
+                        <h6>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" class="img-fluid mb-3" alt="Crash Bandicoot 4">
+                        <h6>Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" class="img-fluid mb-3" alt="Tony hawk's pro skater">
+                        <h6>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" class="img-fluid mb-3" alt="Crash Bandicoot 4">
+                        <h6>Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" class="img-fluid mb-3" alt="Tony hawk's pro skater">
+                        <h6>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" class="img-fluid mb-3" alt="Crash Bandicoot 4">
+                        <h6>Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" class="img-fluid mb-3" alt="Tony hawk's pro skater">
+                        <h6>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" class="img-fluid mb-3" alt="Crash Bandicoot 4">
+                        <h6>Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="ps4">
+            <div class="container-fluid">
+                <div class="row py-5 px-sm-5 ">
+                    <div class="col-12 text-center">
+                        <h1 class="mb-4">Esplora PlayStation&reg; 4</h1>
+                        <p class="my-text-grey mb-4">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS5.</p>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <img src="img/ps4-slim-homepage-image-block.jpg" class="img-fluid mb-3" alt="ps4 img">
+                        <h1 class="mb-4">PlayStation 4</h1>
+                        <p class="my-text-grey ">Giochi incredibili live PS4, con 1 TB di spazio di archiviazione.</p>
+                        <button type="button" class="btn my-btn-info rounded-pill text-white">Scopri di più</button>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <img src="img/double11-202010-tw-psvr.jpg" class="img-fluid mb-3" alt="ps4 vr img">
+                        <h1 class="mb-4">PlayStation VR</h1>
+                        <p class="my-text-grey">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                        <button type="button" class="btn my-btn-info rounded-pill text-white">Scopri di più</button>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <img src="img/dualshock-4-listing-thumb.jpg" class="img-fluid mb-3" alt="ps4 controller img">
+                        <h1 class="mb-4">Accessori</h1>
+                        <p class="my-text-grey">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+                        <button type="button" class="btn my-btn-info rounded-pill text-white">Scopri di più</button>
                     </div>
                 </div>
             </div>
