--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- GOOGLE FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@500;600;700&display=swap" rel="stylesheet"> 
+
     <!-- FONT AWESOME CDN -->
     <script src="https://kit.fontawesome.com/a98f007f43.js" crossorigin="anonymous"></script>
 
@@ -29,27 +37,27 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <a class="nav-link fs-5 text-dark" href="#" >Giochi<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                            <a class="nav-link fs-5 text-dark" href="#" >Giochi<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Hardware<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                            <a class="nav-link fs-5 text-dark" href="#" >Hardware<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Servizi<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                            <a class="nav-link fs-5 text-dark" href="#" >Servizi<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Novità<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                            <a class="nav-link fs-5 text-dark" href="#" >Novità<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Fai acquisti<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                            <a class="nav-link fs-5 text-dark" href="#" >Fai acquisti<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item ms-2">
-                            <a class="nav-link fs-5 text-dark" href="#" >Supporto<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                            <a class="nav-link fs-5 text-dark" href="#" >Supporto<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item ms-3">
-                            <a class="nav-link fs-5 text-dark" href="#" >My Playstation<i class="fas fa-chevron-down ps-2 fs-6 text-secondary"></i></a>
+                            <a class="nav-link fs-5 text-dark" href="#" >My Playstation<i class="fas fa-chevron-down ps-2 fs-6 my-text-grey"></i></a>
                         </li>
                         <li class="nav-item">
                             <button type="button" class="btn btn-dark rounded-pill text-white my-btn-sign mt-1 ms-3">Accedi</button>
@@ -71,11 +79,7 @@
             <div class="container-fluid">
                 <div class="row align-items-end height-670">
                     <div class="col-11 col-lg-6 col-xl-4 text-white ms-sm-5 mb-5 ">
-                        <div class="row">
-                            <div class="col-7 col-lg-6">
-                                <img src="img/returnal-hero-banner-logo.png" class="img-fluid mb-4" alt="img returnal">
-                            </div>
-                        </div>
+                        <img src="img/returnal-hero-banner-logo.png" class="my-img-width mb-4" alt="img returnal">
                         <h1 class="mb-4">Rompi il cerchio</h1>
                         <p class="mb-4">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascentifico, disponibile in esclusiva su PS5.</p>
                         <button type="button" class="btn rounded-pill my-btn-buy text-white">Acquista ora</button>
@@ -128,7 +132,7 @@
                         <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
                     </div>
                 </div>
-                <div class="row text-center justify-content-md-between px-0 px-md-4">
+                <div class="row text-center justify-content-md-between px-0 px-md-4 py-4">
                     <div class="col-4 col-md-2 ">
                         <img src="img/playstation-5-thumb.png" class="img-fluid" alt="PlayStation 5 thumbnail">
                         <p class="d-md-block d-none my-text-grey">Console PS5</p>
@@ -156,11 +160,7 @@
             <div class="container-fluid py-5 px-2 px-sm-4 p-lg-5">
                 <div class="row height-670 align-items-end">
                     <div class="col-11 col-lg-6 col-xl-4 text-white">
-                        <div class="row">
-                            <div class="col-7 col-lg-8">
-                                <img src="img/it-takes-two-logo.png" class="img-fluid mb-5" alt="img it takes two">
-                            </div>
-                        </div>
+                        <img src="img/it-takes-two-logo.png" class="my-img-width mb-5" alt="img it takes two">
                         <h1 class="mb-5 ">Un'avventura cooperativa selvaggia ti attende</h1>
                         <p class="mb-5">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che travolte il suo genere.</p>
                         <button type="button" class="btn rounded-pill my-btn-buy text-white mb-2 fw-bold">Acquista ora</button>
@@ -230,26 +230,40 @@
             <div class="container-fluid">
                 <div class="row py-5 px-sm-5 ">
                     <div class="col-12 text-center">
-                        <h1 class="mb-4">Esplora PlayStation&reg; 4</h1>
-                        <p class="my-text-grey mb-4">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS5.</p>
+                        <h1 class="mb-4">Esplora PlayStation<span class="fs-5 align-top">&reg;</span>  4</h1>
+                        <p class="my-text-grey mb-4 fs-5">Giochi incredibili e intrattenimento senza fine.<br> Non c'è mai stato un momento migliore per giocare sulla tua PS5.</p>
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="img/ps4-slim-homepage-image-block.jpg" class="img-fluid mb-3" alt="ps4 img">
                         <h1 class="mb-4">PlayStation 4</h1>
-                        <p class="my-text-grey ">Giochi incredibili live PS4, con 1 TB di spazio di archiviazione.</p>
-                        <button type="button" class="btn my-btn-info rounded-pill text-white">Scopri di più</button>
+                        <p class="my-text-grey fs-5">Giochi incredibili live PS4, con 1 TB di spazio di archiviazione.</p>
+                        <button type="button" class="btn my-btn-info rounded-pill text-white fw-bold">Scopri di più</button>
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="img/double11-202010-tw-psvr.jpg" class="img-fluid mb-3" alt="ps4 vr img">
                         <h1 class="mb-4">PlayStation VR</h1>
-                        <p class="my-text-grey">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
-                        <button type="button" class="btn my-btn-info rounded-pill text-white">Scopri di più</button>
+                        <p class="my-text-grey fs-5">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                        <button type="button" class="btn my-btn-info rounded-pill text-white fw-bold">Scopri di più</button>
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="img/dualshock-4-listing-thumb.jpg" class="img-fluid mb-3" alt="ps4 controller img">
                         <h1 class="mb-4">Accessori</h1>
-                        <p class="my-text-grey">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
-                        <button type="button" class="btn my-btn-info rounded-pill text-white">Scopri di più</button>
+                        <p class="my-text-grey fs-5">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+                        <button type="button" class="btn my-btn-info rounded-pill text-white fw-bold">Scopri di più</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="plus">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6 px-md-5 py-5 py-md-4 py-lg-5 align-self-center">
+                        <img src="img/ps-plus-logo.png"  class="my-img-width mb-5" alt="PlayStation plus logo">
+                        <p class="mb-5">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                        <button type="button" class="btn rounded-pill bg-light my-text-blue fw-bold">Esplora PlayStation Plus</button>
+                    </div>
+                    <div class="col-6 d-none d-md-inline-block">
+                        <img src="img/ps-plus-april-monthly-games-featured-image-block.png" class="img-fluid" alt="PlayStation Plus img">
                     </div>
                 </div>
             </div>
