--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
         </section>
         <section id="ps4">
             <div class="container-fluid">
-                <div class="row py-5 px-sm-5 ">
+                <div class="row py-5 px-sm-3 px-md-4 px-xl-5 ">
                     <div class="col-12 text-center">
                         <h1 class="mb-4">Esplora PlayStation<span class="fs-5 align-top">&reg;</span>  4</h1>
-                        <p class="my-text-grey mb-4 fs-5">Giochi incredibili e intrattenimento senza fine.<br> Non c'è mai stato un momento migliore per giocare sulla tua PS5.</p>
+                        <p class="my-text-grey mb-5 fs-5">Giochi incredibili e intrattenimento senza fine.<br> Non c'è mai stato un momento migliore per giocare sulla tua PS5.</p>
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="img/ps4-slim-homepage-image-block.jpg" class="img-fluid mb-3" alt="ps4 img">
@@ -257,13 +257,32 @@
         <section id="plus">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 col-md-6 px-md-5 py-5 py-md-4 py-lg-5 align-self-center">
+                    <div class="col-12 col-md-6 px-sm-3 px-md-4 px-xl-5 py-5 py-md-4 py-lg-5 align-self-center">
                         <img src="img/ps-plus-logo.png"  class="my-img-width mb-5" alt="PlayStation plus logo">
                         <p class="mb-5">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
                         <button type="button" class="btn rounded-pill bg-light my-text-blue fw-bold">Esplora PlayStation Plus</button>
                     </div>
                     <div class="col-6 d-none d-md-inline-block">
                         <img src="img/ps-plus-april-monthly-games-featured-image-block.png" class="img-fluid" alt="PlayStation Plus img">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="Store">
+            <div class="container-fluid">
+                <div class="row py-5 px-sm-3 px-md-4 px-xl-5 ">
+                    <div class="col-12 text-center">
+                        <h1 class="mb-4">Nuovi sconti sul PlayStation Store</h1>
+                        <p class="my-text-grey mb-5 fs-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <img src="img/playstation-store-games-under-20-spotlight.jpg" class="img-fluid mb-3" alt="games under spotlight">
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <img src="img/playstation-store-golden-week-sale-spotlight.jpg" class="img-fluid mb-3" alt="store golden week">
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <img src="img/playstation-store-free-to-play-spotlight.png" class="img-fluid mb-3" alt="games free to play">
                     </div>
                 </div>
             </div>
