--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <section id="jumbo">
             <div class="container-fluid">
                 <div class="row align-items-end height-670">
-                    <div class="col-11 col-lg-6 col-xl-4 text-white ms-sm-5 mb-5 ">
+                    <div class="col-11 col-lg-6 col-xl-4 text-white px-sm-3 px-md-4 px-xl-5 py-5">
                         <img src="img/returnal-hero-banner-logo.png" class="my-img-width mb-4" alt="img returnal">
                         <h1 class="mb-4">Rompi il cerchio</h1>
                         <p class="mb-4">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascentifico, disponibile in esclusiva su PS5.</p>
@@ -89,8 +89,8 @@
         </section>
 
         <section id="jumbo-banner" class="banner">
-            <div class="container-fluid px-4 py-5 px-sm-4 py-sm-5 px-lg-5">
-                <div class="row gy-4 gx-4 gx-sm-4 gy-md-5 gx-md-5 gx-xl-4 gx-xxl-5">
+            <div class="container-fluid py-5 py-sm-5 px-sm-3 px-md-4 px-xl-5 ">
+                <div class="row g-4 g-md-5 gx-xl-4">
                     <div class="col-6 col-sm-4 col-xl-2 ">
                         <img src="img/returnal-listing-thumb-01-ps5.jpg" class="img-fluid" alt="returnal thumbnail">
                     </div>
@@ -114,7 +114,7 @@
         </section>
 
         <section id="ps5">
-            <div class="container-fluid px-3 px-sm-4 px-md-5">
+            <div class="container-fluid px-sm-3 px-md-4 px-xl-5 ">
                 <div class="row mt-5 mb-5">
                     <div class="col-12 text-center">
                         <h6 class="text-uppercase my-text-blue fs-6 fw-bold mb-0">play has no limits</h6>
@@ -169,7 +169,7 @@
             </div>
         </section>
         <section class="text-white" id="new">
-            <div class="container-fluid py-3 px-sm-4 px-xl-5 py-xl-5">
+            <div class="container-fluid py-3 px-sm-3 px-md-4 px-xl-5 py-xl-5">
                 <div class="row gy-5">
                     <div class="col-12 text-white">
                         <h1 class="mb-4">Nuove uscite</h1>
@@ -283,6 +283,20 @@
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="img/playstation-store-free-to-play-spotlight.png" class="img-fluid mb-3" alt="games free to play">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="now">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6 px-sm-3 px-md-4 px-xl-5 py-5 py-md-4 py-lg-5 align-self-center">
+                        <img src="img/ps-now-logo-two-column.png"  class="my-img-width mb-5" alt="PlayStation Now logo">
+                        <p class="mb-5 text-white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3, PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
+                        <button type="button" class="btn rounded-pill bg-light text-dark fw-bold">Esplora PlayStation Now</button>
+                    </div>
+                    <div class="col-6 d-none d-md-inline-block">
+                        <img src="img/ps-now-april-featured-image-block.png" class="img-fluid" alt="PlayStation Plus img">
                     </div>
                 </div>
             </div>
