--- a/index.html
+++ b/index.html
@@ -301,6 +301,29 @@
                 </div>
             </div>
         </section>
+        <section id="social">
+            <div class="container-fluid">
+                <div class="row justify-content-center px-sm-3 px-md-4 px-xl-5 py-5">
+                    <div class="col-12 col-lg-8 text-center">
+                        <h1 class="py-4">Seguici sui social media</h1>
+                        <div class="row px-sm-3 px-md-4 px-xl-5 py-5 gy-5 gy-sm-0">
+                            <div class="col-6 col-sm-3">
+                                <img src="img/twitter.jpg" class="img-fluid" alt="Twitter logo">
+                            </div>
+                            <div class="col-6 col-sm-3">
+                                <img src="img/facebook.jpg" class="img-fluid" alt="Facebook logo">
+                            </div>
+                            <div class="col-6 col-sm-3">
+                                <img src="img/instagram.jpg" class="img-fluid" alt="Instagram logo">
+                            </div>
+                            <div class="col-6 col-sm-3">
+                                <img src="img/youtube.png" class="img-fluid" alt="Youtube logo">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
