--- a/index.html
+++ b/index.html
@@ -228,21 +228,21 @@
         </section>
         <section id="ps4">
             <div class="container-fluid py-5">
-                <div class="row py-5 px-sm-3 px-md-4 px-xl-5 ">
+                <div class="row py-5 px-sm-3 px-md-4 px-xl-5 gy-sm-5">
                     <div class="col-12 text-center">
                         <h1 class="mb-4">Esplora PlayStation<span class="fs-5 align-top">&reg;</span>  4</h1>
-                        <p class="my-text-grey mb-5">Giochi incredibili e intrattenimento senza fine.<br> Non c'è mai stato un momento migliore per giocare sulla tua PS5.</p>
+                        <p class="my-text-grey mb-4">Giochi incredibili e intrattenimento senza fine.<br> Non c'è mai stato un momento migliore per giocare sulla tua PS5.</p>
                     </div>
                     <div class="col-12 col-md-4">
-                        <img src="img/ps4-slim-homepage-image-block.jpg" class="img-fluid mb-3" alt="ps4 img">
+                        <img src="img/ps4-slim-homepage-image-block.jpg" class="img-fluid" alt="ps4 img">
                         <h1 class="mb-4">PlayStation 4</h1>
-                        <p class="my-text-grey -5">Giochi incredibili live PS4, con 1 TB di spazio di archiviazione.</p>
+                        <p class="my-text-grey mb-4">Giochi incredibili live PS4, con 1 TB di spazio di archiviazione.</p>
                         <button type="button" class="btn my-btn-info rounded-pill text-white fw-bold">Scopri di più</button>
                     </div>
                     <div class="col-12 col-md-4">
-                        <img src="img/double11-202010-tw-psvr.jpg" class="img-fluid mb-3" alt="ps4 vr img">
+                        <img src="img/double11-202010-tw-psvr.jpg" class="img-fluid" alt="ps4 vr img">
                         <h1 class="mb-4">PlayStation VR</h1>
-                        <p class="my-text-grey">Oltre 500 titoli ed esperienze di gioco.<br> Scoprili tutti.</p>
+                        <p class="my-text-grey mb-4">Oltre 500 titoli ed esperienze di gioco.<br> Scoprili tutti.</p>
                         <button type="button" class="btn my-btn-info rounded-pill text-white fw-bold">Scopri di più</button>
                     </div>
                     <div class="col-12 col-md-4">
