--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <div class="col-12 col-md-6 px-sm-3 px-md-4 px-xl-5 py-5 py-md-4 py-lg-5 align-self-center">
                         <img src="img/ps-plus-logo.png"  class="my-img-width mb-5" alt="PlayStation plus logo">
                         <p class="mb-5">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
-                        <button type="button" class="btn rounded-pill bg-light my-text-blue fw-bold fs-5">Esplora PlayStation Plus</button>
+                        <button type="button" class="btn rounded-pill bg-light my-text-blue fs-5">Esplora PlayStation Plus</button>
                     </div>
                     <div class="col-6 d-none d-md-inline-block">
                         <img src="img/ps-plus-april-monthly-games-featured-image-block.png" class="img-fluid" alt="PlayStation Plus img">
@@ -293,7 +293,7 @@
                     <div class="col-12 col-md-6 px-sm-3 px-md-4 px-xl-5 py-5 py-md-4 py-lg-5 align-self-center">
                         <img src="img/ps-now-logo-two-column.png"  class="my-img-width mb-5" alt="PlayStation Now logo">
                         <p class="mb-5 text-white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3, PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
-                        <button type="button" class="btn rounded-pill bg-light text-dark fw-bold fs-5">Esplora PlayStation Now</button>
+                        <button type="button" class="btn rounded-pill bg-light text-dark fs-5">Esplora PlayStation Now</button>
                     </div>
                     <div class="col-6 d-none d-md-inline-block">
                         <img src="img/ps-now-april-featured-image-block.png" class="img-fluid" alt="PlayStation Plus img">
